Bug 464170 - Fill colors with 0 for the alpha value don't show up as completely transparent as expected
Summary: Fill colors with 0 for the alpha value don't show up as completely transparen...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-11 20:54 UTC by Kai Uwe Broulik
Modified: 2023-05-05 15:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2023-01-11 20:54:23 UTC
SUMMARY
It should be possible to draw non-filled circles and rectangles in Spectacle. It is not possible to set a transparent fill. Imho the default should be a red outline circle without filling, typically you use a circle to mark something, not to draw a filled circle?

STEPS TO REPRODUCE
1. Take a screenshot
2. Try to draw a circle around something

OBSERVED RESULT
Can't. I can't set alpha on the fill color.

EXPECTED RESULT
I can set alpha on the fill color or I have a handy button even to say "filled" or just outline without having to fiddle the outline to be red with 5px etc. It should be the default, too, like the pen, which is lovely, just drawing a circle.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2023-01-11
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-01-12 20:35:25 UTC
I can set the alpha of the fill color to 0, but it doesn't work as expected; I get a transparent gray fill, rather than no fill. Seems like this is supposed to work but it's just buggy.
Comment 2 Kai Uwe Broulik 2023-01-12 20:48:01 UTC
Oh, right, I was just focussing on the fact the RGB was #ff0000 without alpha. However, I still think the UX could be better here, particularly the defaults.
Comment 3 Nate Graham 2023-01-12 20:49:08 UTC
Better default I agree on, which would be best expressed in another bug report.
Comment 4 Noah Davis 2023-01-13 03:26:38 UTC
You probably have a shadow on the circle and the center of the shadow isn't being cut out. If I disable the shadow, then the bug you describe doesn't happen. I suppose a proper drop shadow effect rather than the fast shadows we're currently using would be the proper fix, but it could cause performance issues.
Comment 5 Noah Davis 2023-05-05 15:26:28 UTC
Git commit 901270a7716735a346c4a853f2e646e511f7118c by Noah Davis.
Committed on 05/05/2023 at 10:07.
Pushed by ndavis into branch 'master'.

Multiply annotation shadow opacity by stroke or fill opacity

M  +5    -4    src/Gui/Annotations/Utils.cpp

https://invent.kde.org/graphics/spectacle/commit/901270a7716735a346c4a853f2e646e511f7118c
Comment 6 Noah Davis 2023-05-05 15:28:36 UTC
Git commit 3c45c80c70be9f7ee8866ff43bd1cdb2dca705a9 by Noah Davis.
Committed on 05/05/2023 at 15:28.
Pushed by ndavis into branch 'release/23.04'.

Multiply annotation shadow opacity by stroke or fill opacity


(cherry picked from commit 901270a7716735a346c4a853f2e646e511f7118c)

M  +5    -4    src/Gui/Annotations/Utils.cpp

https://invent.kde.org/graphics/spectacle/commit/3c45c80c70be9f7ee8866ff43bd1cdb2dca705a9