Multiply annotation shadow opacity by stroke or fill opacity

BUG: 464170


(cherry picked from commit 901270a7716735a346c4a853f2e646e511f7118c)